--- a/_posts/0000-01-02-gas-giant.md
+++ b/_posts/0000-01-02-gas-giant.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+I dont want to do my homework!
 Use the left arrow to go back!
